Updating Front End Client

--- a/frontEndClient/src/components/EnemyBoards/EnemyBoards.scss
+++ b/frontEndClient/src/components/EnemyBoards/EnemyBoards.scss
@@ -11,3 +11,17 @@
     margin-bottom: 10px;
     font-size: 20px;
 }
+
+.endTurnButtonWrapper{
+    width: auto;
+    text-align: center;
+    margin-top: 50px;
+    margin-bottom: 50px;
+}
+
+.endButton{
+    width: auto;
+    height: 50px;
+    box-shadow: 0 0 4px 3px rgba(0,0,0,.26);
+    font-size: 25px;
+}
