Updated Styles to Official R3 style

--- a/frontEndClient/src/components/GameBoard/GameBoard.scss
+++ b/frontEndClient/src/components/GameBoard/GameBoard.scss
@@ -13,7 +13,7 @@
 }
 
 .shipBoardItem {
-    background-color: green;
+    background-color: #7DBAEF;
 }
 
 .emptyBoardItem {
@@ -21,9 +21,9 @@
 }
 
 .hitBoardItem {
-    background-color: red;
+    background-color: #CC4A4B;
 }
 
 .missBoardItem {
-    background-color: yellow;
+    background-color: #DDCCEF;
 }
