--- a/frontEndClient/src/components/InteractiveEnemyBoard/InteractiveEnemyBoard.scss
+++ b/frontEndClient/src/components/InteractiveEnemyBoard/InteractiveEnemyBoard.scss
@@ -33,9 +33,9 @@
 }
 
 .interactiveGridElement:hover{
-    background-color: purple;
+    background-color: #98A1D1;
 }
 
 .selectedGridElement{
-    background-color: purple;
+    background-color: #7DBAEF;
 }
