Working 2 player Version

--- a/frontEndClient/src/components/InteractiveEnemyBoard/InteractiveEnemyBoard.scss
+++ b/frontEndClient/src/components/InteractiveEnemyBoard/InteractiveEnemyBoard.scss
@@ -13,7 +13,7 @@
 }
 
 .shipBoardItem {
-    background-color: green;
+    background-color: #5B6B88;
 }
 
 .emptyBoardItem {
@@ -21,11 +21,11 @@
 }
 
 .hitBoardItem {
-    background-color: red;
+    background-color: #CC4A4B;
 }
 
 .missBoardItem {
-    background-color: yellow;
+    background-color: #DDCCEF;
 }
 
 .interactiveGridElement{
